refactor(building): N+1 문제 해결 및 DTO 구조 개선