@@ -1,6 +1,8 @@
 package soomsheo.Telo.building;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import soomsheo.Telo.member.domain.Member;
 import soomsheo.Telo.building.domain.Building;
 import soomsheo.Telo.member.MemberRepository;
@@ -14,55 +16,42 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class BuildingService {
+
     private final BuildingRepository buildingRepository;
     private final MemberService memberService;
     private final MemberRepository memberRepository;
-    private final ResidentRepository residentRepository;
 
-    public BuildingService(BuildingRepository buildingRepository, MemberService memberService, MemberRepository memberRepository, ResidentRepository residentRepository) {
-        this.buildingRepository = buildingRepository;
-        this.memberService = memberService;
-        this.memberRepository = memberRepository;
-        this.residentRepository = residentRepository;
-    }
-
+    @Transactional
     public void saveBuilding(Building building, String realName, String phoneNumber) throws Exception {
-        Member landlord = memberService.findByMemberID(building.getLandlordID());
-        if(landlord.getEncryptedPhoneNumber() == null || landlord.getEncryptedPhoneNumber().isEmpty()) {
-            String encryptedPhoneNumber = EncryptionUtil.encrypt(phoneNumber);
-            landlord.setEncryptedPhoneNumber(encryptedPhoneNumber);
+        String landlordMemberID = building.getLandlord().getMemberID();
+        Member landlord = memberService.findByMemberID(landlordMemberID);
+
+        if (landlord != null && (landlord.getEncryptedPhoneNumber() == null || landlord.getEncryptedPhoneNumber().isEmpty())) {
+            landlord.setEncryptedPhoneNumber(EncryptionUtil.encrypt(phoneNumber));
             landlord.setMemberRealName(realName);
             memberRepository.save(landlord);
-        };
-//        String encryptedAddress = EncryptionUtil.encrypt(building.getBuildingAddress());
-//        building.setbuildingAddress(encryptedAddress);
+        }
         buildingRepository.save(building);
     }
 
-    public Building findByBuildingID(UUID buildingID) {
+    public Optional<Building> findByBuildingID(UUID buildingID) {
         return buildingRepository.findByBuildingID(buildingID);
     }
-
-//    public List<Building> getAllBuildings() throws Exception {
-//        List<Building> buildings = buildingRepository.findAll();
-//        for (Building building : buildings) {
-//            String decryptedAddress = EncryptionUtil.decrypt(building.getEncryptedBuildingAddress());
-//            building.setBuildingAddress(decryptedAddress);
-//        }
-//        return buildings;
-//    }
 
     public List<Building> getAllBuildings() {
         return buildingRepository.findAll();
     }
 
-    public List<Building> findByLandlordID(String landlordID) {
-        return buildingRepository.findByLandlordID(landlordID);
+    public List<Building> findByLandlordID(String landlordMemberID) {
+        return buildingRepository.findByLandlord_MemberID(landlordMemberID);
     }
 
+    @Transactional
     public Building updateNotice(UUID buildingId, String notice) {
-        Building building = buildingRepository.findByBuildingID(buildingId);
+        Building building = buildingRepository.findByBuildingID(buildingId).orElse(null);
         if (building != null) {
             building.setNotice(notice);
             return buildingRepository.save(building);
@@ -71,32 +60,21 @@ public class BuildingService {
     }
 
     public Optional<Building> getBuildingById(UUID buildingID) {
-        return Optional.ofNullable(buildingRepository.findByBuildingID(buildingID));
+        return buildingRepository.findByBuildingID(buildingID);
     }
 
-
-
+    @Transactional
     public void incrementRentedHouseholds(UUID buildingID) {
-        Building building = findByBuildingID(buildingID);
-        if (building != null) {
+        buildingRepository.findByBuildingID(buildingID).ifPresent(building -> {
             building.setNumberOfRentedHouseholds(building.getNumberOfRentedHouseholds() + 1);
             buildingRepository.save(building);
-        }
+        });
     }
 
-    public List<String> findMatchingBuildingAddresses(String partialAddress) throws Exception {
-        List<Building> buildings = buildingRepository.findAll();
-
-        return buildings.stream()
-                .map(building -> {
-                    try {
-                        return building.getBuildingAddress();
-                    } catch (Exception e) {
-                        // 예외 처리
-                        return "";
-                    }
-                })
-                .filter(address -> address.contains(partialAddress))
-                .collect(Collectors.toList());
+    public List<String> findMatchingBuildingAddresses(String partialAddress) {
+        return buildingRepository.findByBuildingAddressContaining(partialAddress)
+                .stream()
+                .map(Building::getBuildingAddress)
+                .toList();
     }
 }
